# takehome

./: .gitignore  CLAUDE.md  TakeHome_PRD_v2.md  plan-logical-jumping-crab.md  plan-prancy-knitting-quail.md
.githooks/: pre-commit
.github/workflows/: ci.yml  testflight.yml
bindings/TakeHomeCore.xcframework/: Info.plist
bindings/headers/: module.modulemap  takehome_coreFFI.h
bindings/swift/: takehome_core.swift  takehome_coreFFI.modulemap
core/: Cargo.toml  Makefile  build.rs  clippy.toml  rustfmt.toml
core/benches/: calculations.rs
core/src/: engine.rs  ffi.rs  lib.rs
core/src/calculators/: federal.rs  fica.rs  mod.rs  state.rs  timeframe.rs
core/src/data/: embedded.rs  mod.rs
core/src/models/: deduction.rs  household.rs  income.rs  mod.rs  state.rs  tax.rs
core/uniffi/: takehome_core.udl
docs/: PRD_GO_LIVE.md
docs/technical/: 00_Technical_Architecture_Index.md  01_Architecture_Patterns.md  02_Data_Models.md  03_Calculation_Formulas.md  04_Tax_Data_Architecture.md  05_State_Machine_Navigation.md  06_Rust_Core_Engine.md
ios/: ExportOptions.plist  README.md  plan-logical-jumping-crab.md  project.yml
ios/TakeHome.xcodeproj/: project.pbxproj
ios/TakeHome/App/: DependencyContainer.swift  TakeHomeApp.swift
ios/TakeHome/Core/: DecimalConversions.swift  TakeHome-Bridging-Header.h  TakeHomeCoreWrapper.swift
ios/TakeHome/Models/: DeductionEntry.swift  DeductionFrequency.swift  DeductionInputType.swift  DeductionType.swift  Expense.swift  Income.swift  (+7 more)
ios/TakeHomeUITests/: Info.plist  OnboardingUITests.swift
ios/fastlane/: Appfile  Fastfile
(+38 files in other folders)
